FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20190919:
AUTHOR: madpilot@FreeBSD.org

  USES=xfce now defaults to gtk3, so for ported applications requiring
  GTK2 XFCE support USES=xfce:gtk2 should be used.

20190903:
AUTHOR: bapt@FreeBSD.org

  The ports tree now supports overlays

  overlays are a way to help users to integrate their own ports tree
  with the official ports tree without having to maintain clone of the
  official tree and remerge on regular basis.

  The ports tree will lookup in the overlays (in the order the are listed in
  OVERLAY variable) for the dependencies and the USES. It will use the first
  found.

  in order to use it the user have to declare his overlays that way in their
  make.conf:
  OVERLAYS= overlay1 overlay2 overlay3

20181225:
AUTHOR: kde@FreeBSD.org

  cmake.mk now defaults to out-of-sourcetree builds. The option 'outsource'
  has been removed. Ports that need an intree build now can pass 'insource'.

20181110:
AUTHOR: bapt@FreeBSD.org

  texinfo files are now installed in ${PREFIX}/share/info

20180630:
AUTHOR: kde@FreeBSD.org

  bsd.qt.mk has been replaced by qt.mk. This changes the way ports have to
  depend on Qt slightly.

  Previously one would have written
  	USE_QT4=foo bar
  or
  	USE_QT5=foo bar
  while now one has to write
  	USES=qt:4
  	USE_QT=foo bar
  respectively
  	USES=qt:5
  	USE_QT=foo bar

  Further qmake.mk no longer respects QT_NONSTANDARD. Ports that don't want to
  get the configure environment provided by qmake.mk should add the argument
  no_env, ports that don't want the configure target should specify no_configure.

20180506:
AUTHOR: brnrd@FreeBSD.org
